test/pass/generics/and_then.lily
# This test checks that lambdas can pull inference information when they are
# to be returned. and_then is also called too, just to make sure it works.

define and_then[A, B, C](f: Function(A => B), g: Function(B => C)):Function(A => C)
{
    return (|a| g(f(a)) )
}

define piped_and_then[A, B, C](f: Function(A => B), g: Function(B => C)):Function(A => C)
{
    return (|a| a |> f |> g )
}

define f(a: Integer): Integer { return a * a }

and_then(f, f)(10)
piped_and_then(f, and_then(f, f))(20)
